# emc

./: .gitignore  CMakeLists.txt  execute.sh
Detection_block/: CMakeLists.txt  README_DETECTION
Detection_block/src/: OpenCVTest.cpp  config.h  detection.cpp  detection.h  main.cpp  visualize.cpp
develop/detection/: CMakeLists.txt
develop/detection/detection_1/src/: detection.cpp
develop/detection/detection_2/: CMakeLists.txt
develop/detection/detection_2/src/: detection.h
develop/detection/detection_3/: CMakeLists.txt
develop/detection/detection_3/src/: detection.cpp  detection.h  visualize.cpp  visualize.h
develop/detection/detection_4/src/: detection.cpp  detection.h  visualize.cpp
develop/detection/detection_5/src/: main.cpp  visualize.h
develop/detection/detection_6/src/: visualize.cpp
develop/detection/detection_7/: .execute.sh.swp
develop/detection/detection_8/src/: detection.cpp
develop/detection/src/: detection.h  main.cpp  visualize.cpp  visualize.h
develop/detection_2/src/: config.h  detection.cpp  main.cpp
develop/detection_3/src/: detection.cpp  detection.h  main.cpp  visualize.cpp  visualize.h
develop/detection_4/: CMakeLists.txt
develop/detection_4/src/: config.h  detection.cpp  detection.h  main.cpp  visualize.cpp  visualize.h
develop/detection_5/: CMakeLists.txt
develop/detection_5/src/: config.h  detection.cpp  main.cpp  visualize.cpp
develop/detection_6/: CMakeLists.txt
develop/detection_6/src/: detection.cpp  main.cpp
develop/detection_7/: CMakeLists.txt
develop/detection_7/src/: main.cpp
develop/detection_mapping_1/src/: mapping.cpp  mapping.h
develop/final_hospital_jari/: CMakeLists.txt
develop/final_hospital_jari/include/: driveControl.hpp  helper.hpp  mapping.hpp  planning.hpp  stateMachine.hpp
develop/final_hospital_jari/main/: explore.cpp
develop/final_hospital_jari/src/: detection.cpp  visualize.cpp
develop/hospital/: CMakeLists.txt  main_search.cpp
develop/hospital/include/: config.h  config.hpp  detection.h  detection.hpp  driveControl.h  helper.h  mapping.h  planning.h  planning.hpp  visualize.hpp  worldModel.h
develop/hospital/main/: explore.cpp
develop/hospital/src/: detection.cpp  driveControl.cpp  helper.cpp  main_explore.cpp  mapping.cpp  monitoring.cpp  planning.cpp  stateMachine.cpp  worldModel.cpp
develop/hospital_jari/: CMakeLists.txt  execute.sh
develop/hospital_jari/include/: config.h  helper.h  mapping.h  monitoring.h  worldModel.h
develop/hospital_jari/src/: detection.cpp  driveControl.cpp  mapping.cpp  planning.cpp  stateMachine.cpp  worldModel.cpp
develop/mapping/detection_mapping_1/: CMakeLists.txt
develop/mapping/detection_mapping_1/src/: detection.cpp  detection.h
develop/mapping/mapping_1/src/: mapping.h
develop/mapping/mapping_2/: CMakeLists.txt
develop/mapping_1/: CMakeLists.txt
develop/mapping_1/src/: detection.cpp  detection.h  mapping.cpp  mapping.h
develop/mapping_2/src/: mapping.cpp  mapping.h  visualize.cpp
develop/visualiser/visualiser-develop-1/: CMakeLists.txt
develop/visualiser/visualiser-develop-1/src/: myperception.cpp  worldModel.h
develop/visualiser/visualiser-develop-2/: CMakeLists.txt  execute.sh
develop/visualiser/visualiser-develop-2/src/: detection.h  driveControl.h  myperception.cpp  planning.h
develop/visualiser/visualiser-develop-3/: CMakeLists.txt
develop/visualiser/visualiser-develop-3/src/: config.h  detection.cpp  main.cpp  visualize.cpp  visualize.h
develop/worldmodel/json_example/: CMakeLists.txt
develop/worldmodel/json_example/src/: corner.h  read.cpp  write.cpp
develop/worldmodel/json_example_2/: CMakeLists.txt
develop/worldmodel/json_example_2/src/: write.cpp
develop/worldmodel/src/: worldModel.h
develop/worldmodel/worldmodel1/: CMakeLists.txt  execute.sh
develop/worldmodel/worldmodel1/include/: config.h  worldModel.h  worldModelDataTypes.h
develop/worldmodel/worldmodel1/src/: main.cpp  worldModel.cpp  worldmodel.cpp
drive_control/: ReadMe.txt  driveControl.h
drive_test/: CMakeLists.txt  config.h  driveControl.cpp  driveControl.h  log  main.cpp.autosave
escape_room/: CMakeLists.txt  execute.sh
escape_room/include/: config.h
escape_room/src/: detection.cpp  detection.h  driveControl.cpp  driveControl.h  helper.hpp  initialization.cpp  main.cpp  main.hpp  main2.cpp  main2.hpp  planning.cpp  planning.h
example/: execute.sh
example/src/: config.h  main.cpp  worldModel.cpp  worldModel.h
hospital/: CMakeLists.txt
hospital/include/: config.h  driveControl.h  helper.h  mapping.h  stateMachine.h  worldModel.h
hospital/src/: detection.cpp  detection.h  driveControl.cpp  driveControl.h  main.cpp  main.hpp  main2.hpp  main_explore.cpp  mapping.cpp  mapping.h  monitoring.cpp  monitoring.h  planning.cpp  planning.h  stateMachine.cpp  stateMachine.h  visualize.cpp  worldModel.cpp  worldModel.h
src/: detection.h  driveControl.h  example.cpp  main.cpp  main.hpp  planning.cpp  planning.h
src/interfaces/planning/: CMakeLists.txt  README  execute.sh  planning.cpp  planning.h
src/interfaces/planning/include/: config.h  planning.h
src/interfaces/planning/src/: main.cc  planning.cc
src/interfaces/planning2/: CMakeLists.txt
src/interfaces/planning2/include/: config.h  planning.h
src/interfaces/planning2/src/: main.cpp  planning.cpp
test_module/detection_test/: CMakeLists.txt
test_module/detection_test/src/: detection.cpp  main.cpp
test_module/drive_test/: driveControl.cpp  log
test_module/hospital_drive_test/: CMakeLists.txt
test_module/hospital_drive_test/include/: config.hpp  driveControl.hpp  monitoring.hpp  visualize.hpp  worldModel.hpp
test_module/hospital_drive_test/main/: detection_test.cpp  drive_test.cpp  json_test.cpp
test_module/hospital_drive_test/src/: detection.cpp  driveControl.cpp  helper.cpp  mapping.cpp  visualize.cpp  worldModel.cpp
visualiser/: CMakeLists.txt
visualiser/develop/visualiser-develop-1/include/: config.h
visualiser/develop/visualiser-develop-1/src/: main.cpp  (+3 more)
visualiser/src/: main2.cpp  myperception.cpp  visualize.cpp.tZ7875
(+3 files in other folders)
